# mini-search-engine

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/corpus/: ml.txt  python.txt  rust.txt
searchengine/: __init__.py  bm25.py  cli.py  engine.py  index.py  tokenizer.py
tests/: test_engine.py  test_index.py  test_tokenizer.py
