[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-search-engine"
version = "0.1.0"
description = "BM25 search engine with inverted index"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Mini Search Engine Contributors" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
mini-search = "searchengine.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["searchengine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
